# leo-twin

./: .gitignore  README.md  browser_smoke_leo_twin.bat  control_smoke_leo_twin.bat  dashboard_leo_twin.bat  diagnostics_leo_twin.bat  disposable_acceptance_leo_twin.bat  leo_twin_launcher.bat  pyproject.toml  restart_leo_twin.bat  run_demo.py  smoke_leo_twin.bat  start_leo_twin.bat  status_leo_twin.bat  stop_leo_twin.bat
configs/: full_system_pipeline_demo.json  full_system_task_plan.yaml  generated_full_system_demo.json  integration_demo.yaml  mvp_1000sat.yaml  mvp_72sat.yaml  sees_control.yaml
docs/: architecture.md  backpressure_notice_dismissal_v1.md  benchmark_scenario_matrix_v1.md  business_request_lifecycle_v2.md  cache_offload_migration_contract_v1.md  codex_skill.md  completion_notice_dismissal_v1.md  compute_resource_contract_v2.md  compute_service_resource_evidence_v1.md  current_product_status.md  dashboard_core_detail_cursor_controls_v1.md  dashboard_cursor_contract_binding_v1.md  dashboard_detail_window_policy_v1.md  dashboard_exact_detail_binding_v1.md  dashboard_exact_detail_request_status_v1.md  dashboard_filter_scope_notice_v1.md  dashboard_information_architecture_v3.md  dashboard_model_assumptions_panel_v1.md  dashboard_model_trust_evidence_workspace_v1.md  dashboard_satellite_detail_drawer_v1.md  dashboard_service_compute_cursor_controls_v1.md  dashboard_service_compute_detail_tables_v1.md  dashboard_user_detail_drawer_v1.md  data_model.md  development_log.md  development_plan.md  earth_visual_policy_v2.md  executable_readiness_v1.md  (+51 more)
(+365 files in other folders)
