[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-twin"
version = "0.0.0"
description = "MVP-0 skeleton for a deterministic LEO satellite internet digital twin simulation framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
leo-twin-review = "leo_twin.reviewer.cli:main"
sees-run = "leo_twin.sees.cli:main_run"
sees-review = "leo_twin.sees.cli:main_review"
sees-fix = "leo_twin.sees.cli:main_fix"
sees-evolve = "leo_twin.sees.cli:main_evolve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
